kubernetes/apps/authelia/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
  - match: Host(`auth.woitzik.dev`) && PathPrefix(`/`)
    kind: Rule
    services: [{name: authelia, port: 9091}]
  tls: {secretName: wildcard-woitzik-dev-tls}
